[gd_scene load_steps=13 format=2]

[ext_resource path="res://Tilesets/GroundTiles.res" type="TileSet" id=1]
[ext_resource path="res://Tilesets/RoadTiles.res" type="TileSet" id=2]
[ext_resource path="res://Tilesets/WallTiles.res" type="TileSet" id=3]
[ext_resource path="res://Scenes/Items/Pick_Up.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Carts/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Maps/Navigation2D.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Items/Rocket.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Maps/BotPath.gd" type="Script" id=8]
[ext_resource path="res://Sprites/Carts/Player_Green.png" type="Texture" id=9]

[sub_resource type="NavigationPolygon" id=4]

vertices = PoolVector2Array( -430.037, 698.046, -419.49, 458.143, 176.549, 475.004, 170.045, 702.052, 170.005, 705.123, 169.763, 711.923, -435.609, 1020.83, 169.48, 721.795, 160.431, 1037.69, -418.077, 408.785, -410.724, 152.122, 185.033, 178.854, 179.094, 386.159, -419.49, 458.143, 207.373, -601.007, 188.144, 70.266, -407.614, 43.5338, -375.376, -1081.83, 262.798, -2535.85, -317.123, -3115.4, 291.925, -3552.63, 171.832, -3872.18, 238.259, -3761.62, 284.536, -3641.76, -319.705, -3372.34, -318.574, -3411.83, 55.4518, -3974.27, 160.431, 1037.69, 157.32, 1146.28, -436.457, 1050.44, -443.81, 1307.11, 173.229, 1285.04, -447.203, 1425.57, 181.467, 1344.55, -402.623, 1604.66, 209.289, 1414.5, -357.195, 1754.14, -300.702, 1864.41, 237.394, 1474.57, -185.17, 1996.12, 99.2399, 2132.6, 29.9846, 2120.76, -78.1582, 2078.18, 275.999, 1515.18, 158.844, 2134.28, 315.17, 1536.05, 536.336, 2144.96, 434.095, 1549.29, 791.719, 1559.41, 774.469, 2161.58, 893.394, 2174.82, 891.059, 1562.22, 1040.07, 1566.43, 1002.1, 2197.66, 1168.36, 1599.7, 1336.11, 1643.96, 1060.86, 2228.96, 1443.97, 1696.41, 1090.09, 2249.54, 1561.2, 1768.89, 1119.33, 2270.13, 1657.99, 1860.54, 1724.42, 1971.1, 1751.96, 2050.91, 1768.72, 2160.06, 1147.72, 2320.33, 1765.61, 2268.65, 1753.16, 2703.01, 1155.11, 2409.46, 1150.02, 2587.15, 1740.97, 2781.7, 1116.26, 2724.51, 1729.05, 2850.52, 1695.01, 2997.75, 1073.98, 2812.23, 1630.88, 3154.01, 1578.38, 3251.32, 1032.83, 2860.46, 1516.52, 3328.61, 1394.48, 3423.95, 1283.51, 3480.09, 1143.87, 3495.9, 982.308, 2888.67, 885.586, 3488.6, 753.543, 2892.08, 309.414, 3472.3, -905.435, 2845.15, -1349.56, 3425.37, -2226.66, 2807.78, -2412.5, 3395.3, -2394.69, 2773.39, -2511.56, 3382.62, -2709.11, 3337.51, -2473.59, 2751.4, -2905.81, 3262.79, -2532.35, 2720.09, -3032.41, 3170.29, -2580.89, 2679.2, -3109.61, 3089.07, -3166.67, 2998.54, -3203.58, 2898.7, -2609.28, 2629, -3221.19, 2819.16, -3220.06, 2779.68, -3202.24, 2157.76, -2608.43, 2599.39, -2612.71, 2401.67, -2583.01, 1365.15, -3180.18, 1387.77, -2548.69, 1208.05, -3173.96, 1170.6, -3160.64, 1052.42, -3083.46, 787.852, -2515.77, 1100.3, -3009.4, 631.872, -2453.62, 1013.14, -2896.45, 506.632, -2784.91, 430.75, -2644.42, 385.326, -2413.04, 984.65, -2564.67, 377.702, -2544.8, 378.264, -2325.97, 374.575, -2393.17, 985.212, -1698.39, 678.837, -1781.54, 804.921, -1893.64, 900.546, -1994.68, 956.966, -2134.61, 982.647, -2273.96, 988.584, -2265.52, 346.646, -1635.11, 552.192, -1591.7, 424.984, -2213.59, 269.078, -1556.53, 238.266, -2180.67, 161.332, -2157.98, 63.1779, -1546.35, -117.114, -2156.28, 3.948, -2153.45, -94.7686, -1543.8, -205.959, -2170.21, -203.919, -1560.84, -305.237, -1585.84, -473.898, -2198.03, -273.863, -1622.46, -583.61, -1659.65, -673.579, -2226.14, -333.936, -1726.36, -774.263, -2254.81, -374.266, -1784.27, -835.179, -2087.98, -991.965, -2048.53, -980.969, -1979.56, -959.259, -1900.93, -927.396, -1813.22, -865.637, -2293.98, -395.133, -3150.92, -1022.03, -2323.78, -395.976, -2959.27, -423.833, -3903, -450.528, -3707.22, -1037.77, -3963.81, -1104.31, -4021.93, -463.772, -4160.16, -497.321, -4288.17, -540.461, -4022.85, -1125.73, -4356.86, -572.043, -4464.43, -634.364, -4551.86, -705.995, -4061.46, -1166.35, -4628.5, -806.959, -4684.72, -927.105, -4701.19, -1046.13, -4089.84, -1216.55, -4688.75, -1480.48, -4093.27, -1443.88, -4080.55, -1888.1, -4670.93, -2102.39, -4076.31, -2036.18, -4666.69, -2250.47, -4030.63, -2242.36, -4653.36, -2368.65, -4619.88, -2496.14, -3998.28, -2330.36, -4544.69, -2691.6, -4461.26, -2827.56, -4338.94, -2932.77, -3957.42, -2368.72, -4207.82, -2998.22, -3906.62, -2406.8, -4117.57, -3025.31, -4048.03, -3023.34, -3054.63, -2995.24, -3836.8, -2414.71, -3667.64, -2419.8, -2833.18, -2396.2, -2902.72, -2398.16, -2934.85, -3011.61, -2673.39, -2421.31, -2543.4, -2447.28, -2784.71, -3046.88, -2402.62, -2502.57, -2158.84, -2683.39, -2291.65, -2558.71, -2703.83, -3093.99, -2106.05, -2790.57, -2062.36, -2927.65, -2084.77, -2839.37, -2672.89, -3132.64, -2061.23, -2967.14, -2046.24, -3490.34, -2662.11, -3161.97, -2645.67, -3388.74, -2023.05, -4299.81, -2035.21, -3875.33, -2616.55, -4405.52, -2016.27, -4536.73, -1999.55, -4773.37, -2608.06, -4701.67, -2600.99, -4948.46, -2589.08, -5017.28, -1978.55, -4812.3, -2566.67, -5105.56, -2503.67, -5222.34, -2431.59, -5309.21, -2299.9, -5394.41, -1927.74, -4850.38, -2158.85, -5459.57, -2008.7, -5494.84, -1847.14, -4887.62, -1798.96, -5528.43, -1707.22, -4913.3, -1679.75, -5525.06, -1587.73, -4919.8, -1351.93, -5515.78, -1488.67, -4907.11, -1263.09, -5493.51, -1389.9, -4884.56, -1134.79, -5460.24, -1321.21, -4852.98, -967.331, -5406.11, -879.339, -5354.22, -1262.73, -4811.81, -781.978, -5282.31, -734.005, -5221.67, -1233.78, -4781.35, -686.032, -5161.04, -648.558, -5080.94, -621.018, -5001.13, -613.346, -4921.87, -605.958, -4832.75, -1224.69, -4751.45, -619.85, -4694.82, -1219, -4603.1, -1225.54, -4721.84, -621.793, -4279.93, -1230.88, -4188.49, -612.425, -4259.91, -1233.99, -4079.9, -42.1915, -4036.31, -366.83, -3462.59, -169.92, -4089.32, -278.345, -4122.02, -435.236, -3504.04, -406.922, -4145.42, -543.945, -3526.88, -486.111, -4157.54, -525.281, -4178.41, -633.068, -3539.28, -771.013, -3582.7, -967.431, -3667.29, -583.754, -4219.58, -1122.7, -3800.12, -1198.49, -3930.7, -407.614, 43.5338 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 0, 3, 4, 5, 6 ), PoolIntArray( 6, 5, 7 ), PoolIntArray( 8, 6, 7 ), PoolIntArray( 9, 10, 11, 12 ), PoolIntArray( 9, 12, 2, 13 ), PoolIntArray( 14, 15, 16, 17 ), PoolIntArray( 18, 14, 17, 19, 20 ), PoolIntArray( 21, 22, 23, 20, 19, 24, 25, 26 ), PoolIntArray( 6, 27, 28, 29 ), PoolIntArray( 30, 29, 28, 31 ), PoolIntArray( 32, 30, 31, 33, 34 ), PoolIntArray( 34, 33, 35, 36 ), PoolIntArray( 37, 36, 35, 38, 39 ), PoolIntArray( 40, 41, 42, 39, 38, 43, 44 ), PoolIntArray( 44, 43, 45, 46 ), PoolIntArray( 46, 45, 47 ), PoolIntArray( 46, 47, 48, 49 ), PoolIntArray( 50, 49, 48, 51, 52 ), PoolIntArray( 53, 50, 52, 54, 55 ), PoolIntArray( 56, 53, 55, 57 ), PoolIntArray( 58, 56, 57, 59 ), PoolIntArray( 60, 58, 59, 61, 62, 63, 64 ), PoolIntArray( 65, 60, 64, 66, 67 ), PoolIntArray( 68, 65, 67 ), PoolIntArray( 69, 68, 67, 70 ), PoolIntArray( 71, 69, 70, 72, 73 ), PoolIntArray( 74, 71, 73, 75, 76 ), PoolIntArray( 77, 74, 76, 78, 79, 80, 81 ), PoolIntArray( 82, 77, 81, 83 ), PoolIntArray( 84, 82, 83, 85 ), PoolIntArray( 86, 84, 85, 87 ), PoolIntArray( 88, 86, 87, 89 ), PoolIntArray( 90, 88, 89, 91, 92 ), PoolIntArray( 93, 90, 92, 94 ), PoolIntArray( 95, 93, 94, 96 ), PoolIntArray( 97, 95, 96, 98, 99, 100 ), PoolIntArray( 101, 97, 100, 102, 103, 104 ), PoolIntArray( 105, 101, 104, 106 ), PoolIntArray( 107, 106, 104, 108 ), PoolIntArray( 109, 107, 108, 110, 111, 112 ), PoolIntArray( 113, 109, 112, 114 ), PoolIntArray( 115, 113, 114, 116, 117, 118 ), PoolIntArray( 119, 115, 118, 120, 121 ), PoolIntArray( 119, 121, 122, 123 ), PoolIntArray( 124, 125, 126, 127, 128, 129, 123, 122, 130, 131 ), PoolIntArray( 132, 131, 130, 133, 134 ), PoolIntArray( 134, 133, 135 ), PoolIntArray( 134, 135, 136, 137 ), PoolIntArray( 137, 136, 138, 139, 140 ), PoolIntArray( 140, 139, 141, 142 ), PoolIntArray( 143, 142, 141, 144, 145 ), PoolIntArray( 146, 145, 144, 147, 148 ), PoolIntArray( 148, 147, 149, 150 ), PoolIntArray( 151, 152, 153, 154, 155, 150, 149, 156, 157 ), PoolIntArray( 157, 156, 158, 159 ), PoolIntArray( 157, 159, 160, 161 ), PoolIntArray( 162, 161, 160, 163, 164, 165 ), PoolIntArray( 166, 162, 165, 167, 168, 169 ), PoolIntArray( 170, 166, 169, 171, 172, 173 ), PoolIntArray( 174, 170, 173, 175 ), PoolIntArray( 176, 174, 175 ), PoolIntArray( 177, 176, 175, 178 ), PoolIntArray( 179, 177, 178, 180 ), PoolIntArray( 181, 179, 180, 182, 183 ), PoolIntArray( 184, 181, 183, 185, 186, 187 ), PoolIntArray( 188, 184, 187, 189 ), PoolIntArray( 190, 188, 189, 191, 192 ), PoolIntArray( 190, 192, 193, 194 ), PoolIntArray( 195, 194, 193 ), PoolIntArray( 196, 197, 195, 193, 198, 199 ), PoolIntArray( 200, 199, 198, 201, 202 ), PoolIntArray( 203, 204, 202, 201, 205, 206 ), PoolIntArray( 207, 208, 206, 205, 209, 210 ), PoolIntArray( 211, 210, 209, 212 ), PoolIntArray( 211, 212, 213 ), PoolIntArray( 214, 215, 211, 213, 216, 217 ), PoolIntArray( 218, 217, 216, 219, 220, 221 ), PoolIntArray( 222, 218, 221, 223, 224, 225, 226 ), PoolIntArray( 227, 222, 226, 228, 229 ), PoolIntArray( 230, 227, 229, 231 ), PoolIntArray( 232, 230, 231, 233 ), PoolIntArray( 234, 232, 233, 235 ), PoolIntArray( 236, 234, 235, 237 ), PoolIntArray( 238, 236, 237, 239 ), PoolIntArray( 240, 238, 239, 241, 242 ), PoolIntArray( 243, 240, 242, 244, 245 ), PoolIntArray( 246, 243, 245, 247, 248, 249, 250, 251 ), PoolIntArray( 252, 246, 251, 253 ), PoolIntArray( 254, 255, 252, 253, 256 ), PoolIntArray( 257, 254, 256, 258, 259 ), PoolIntArray( 260, 26, 25, 261, 262 ), PoolIntArray( 263, 262, 261, 264, 265 ), PoolIntArray( 265, 264, 266, 267 ), PoolIntArray( 268, 267, 266, 269, 270, 271 ), PoolIntArray( 272, 268, 271, 273, 274, 259 ), PoolIntArray( 258, 272, 259 ), PoolIntArray( 10, 275, 15, 11 ) ]
outlines = [ PoolVector2Array( -430.037, 698.046, -419.49, 458.143, 176.549, 475.004, 170.045, 702.052 ), PoolVector2Array( -435.609, 1020.83, -430.037, 698.046, 170.045, 702.052, 170.005, 705.123, 169.763, 711.923, 169.48, 721.795, 160.431, 1037.69 ), PoolVector2Array( -418.077, 408.785, -419.49, 458.143, 176.549, 475.004, 179.094, 386.159, 185.033, 178.854, -410.724, 152.122 ), PoolVector2Array( 160.431, 1037.69, 157.32, 1146.28, 173.229, 1285.04, 181.467, 1344.55, 209.289, 1414.5, 237.394, 1474.57, 275.999, 1515.18, 315.17, 1536.05, 434.095, 1549.29, 791.719, 1559.41, 891.059, 1562.22, 1040.07, 1566.43, 1168.36, 1599.7, 1336.11, 1643.96, 1443.97, 1696.41, 1561.2, 1768.89, 1657.99, 1860.54, 1724.42, 1971.1, 1751.96, 2050.91, 1768.72, 2160.06, 1765.61, 2268.65, 1753.16, 2703.01, 1740.97, 2781.7, 1729.05, 2850.52, 1695.01, 2997.75, 1630.88, 3154.01, 1578.38, 3251.32, 1516.52, 3328.61, 1394.48, 3423.95, 1283.51, 3480.09, 1143.87, 3495.9, 885.586, 3488.6, 309.414, 3472.3, -1349.56, 3425.37, -2412.5, 3395.3, -2511.56, 3382.62, -2709.11, 3337.51, -2905.81, 3262.79, -3032.41, 3170.29, -3109.61, 3089.07, -3166.67, 2998.54, -3203.58, 2898.7, -3221.19, 2819.16, -3220.06, 2779.68, -3202.24, 2157.76, -3180.18, 1387.77, -3173.96, 1170.6, -3160.64, 1052.42, -3083.46, 787.852, -3009.4, 631.872, -2896.45, 506.632, -2784.91, 430.75, -2644.42, 385.326, -2564.67, 377.702, -2544.8, 378.264, -2325.97, 374.575, -2265.52, 346.646, -2213.59, 269.078, -2180.67, 161.332, -2157.98, 63.1779, -2156.28, 3.948, -2153.45, -94.7686, -2170.21, -203.919, -2198.03, -273.863, -2226.14, -333.936, -2254.81, -374.266, -2293.98, -395.133, -2323.78, -395.976, -2959.27, -423.833, -3903, -450.528, -4021.93, -463.772, -4160.16, -497.321, -4288.17, -540.461, -4356.86, -572.043, -4464.43, -634.364, -4551.86, -705.995, -4628.5, -806.959, -4684.72, -927.105, -4701.19, -1046.13, -4688.75, -1480.48, -4670.93, -2102.39, -4666.69, -2250.47, -4653.36, -2368.65, -4619.88, -2496.14, -4544.69, -2691.6, -4461.26, -2827.56, -4338.94, -2932.77, -4207.82, -2998.22, -4117.57, -3025.31, -4048.03, -3023.34, -3054.63, -2995.24, -2934.85, -3011.61, -2784.71, -3046.88, -2703.83, -3093.99, -2672.89, -3132.64, -2662.11, -3161.97, -2645.67, -3388.74, -2616.55, -4405.52, -2608.06, -4701.67, -2600.99, -4948.46, -2589.08, -5017.28, -2566.67, -5105.56, -2503.67, -5222.34, -2431.59, -5309.21, -2299.9, -5394.41, -2158.85, -5459.57, -2008.7, -5494.84, -1798.96, -5528.43, -1679.75, -5525.06, -1351.93, -5515.78, -1263.09, -5493.51, -1134.79, -5460.24, -967.331, -5406.11, -879.339, -5354.22, -781.978, -5282.31, -734.005, -5221.67, -686.032, -5161.04, -648.558, -5080.94, -621.018, -5001.13, -613.346, -4921.87, -605.958, -4832.75, -619.85, -4694.82, -621.793, -4279.93, -612.425, -4259.91, -583.754, -4219.58, -525.281, -4178.41, -486.111, -4157.54, -406.922, -4145.42, -278.345, -4122.02, -169.92, -4089.32, -42.1915, -4036.31, 55.4518, -3974.27, 171.832, -3872.18, 238.259, -3761.62, 284.536, -3641.76, 291.925, -3552.63, 262.798, -2535.85, 207.373, -601.007, 188.144, 70.266, -407.614, 43.5338, -375.376, -1081.83, -317.123, -3115.4, -319.705, -3372.34, -318.574, -3411.83, -366.83, -3462.59, -435.236, -3504.04, -543.945, -3526.88, -633.068, -3539.28, -771.013, -3582.7, -967.431, -3667.29, -1122.7, -3800.12, -1198.49, -3930.7, -1233.99, -4079.9, -1230.88, -4188.49, -1219, -4603.1, -1225.54, -4721.84, -1224.69, -4751.45, -1233.78, -4781.35, -1262.73, -4811.81, -1321.21, -4852.98, -1389.9, -4884.56, -1488.67, -4907.11, -1587.73, -4919.8, -1707.22, -4913.3, -1847.14, -4887.62, -1927.74, -4850.38, -1978.55, -4812.3, -1999.55, -4773.37, -2016.27, -4536.73, -2023.05, -4299.81, -2035.21, -3875.33, -2046.24, -3490.34, -2061.23, -2967.14, -2062.36, -2927.65, -2084.77, -2839.37, -2106.05, -2790.57, -2158.84, -2683.39, -2291.65, -2558.71, -2402.62, -2502.57, -2543.4, -2447.28, -2673.39, -2421.31, -2833.18, -2396.2, -2902.72, -2398.16, -3667.64, -2419.8, -3836.8, -2414.71, -3906.62, -2406.8, -3957.42, -2368.72, -3998.28, -2330.36, -4030.63, -2242.36, -4076.31, -2036.18, -4080.55, -1888.1, -4093.27, -1443.88, -4089.84, -1216.55, -4061.46, -1166.35, -4022.85, -1125.73, -3963.81, -1104.31, -3707.22, -1037.77, -3150.92, -1022.03, -2087.98, -991.965, -2048.53, -980.969, -1979.56, -959.259, -1900.93, -927.396, -1813.22, -865.637, -1784.27, -835.179, -1726.36, -774.263, -1659.65, -673.579, -1622.46, -583.61, -1585.84, -473.898, -1560.84, -305.237, -1543.8, -205.959, -1546.35, -117.114, -1556.53, 238.266, -1591.7, 424.984, -1635.11, 552.192, -1698.39, 678.837, -1781.54, 804.921, -1893.64, 900.546, -1994.68, 956.966, -2134.61, 982.647, -2273.96, 988.584, -2393.17, 985.212, -2413.04, 984.65, -2453.62, 1013.14, -2515.77, 1100.3, -2548.69, 1208.05, -2583.01, 1365.15, -2612.71, 2401.67, -2608.43, 2599.39, -2609.28, 2629, -2580.89, 2679.2, -2532.35, 2720.09, -2473.59, 2751.4, -2394.69, 2773.39, -2226.66, 2807.78, -905.435, 2845.15, 753.543, 2892.08, 982.308, 2888.67, 1032.83, 2860.46, 1073.98, 2812.23, 1116.26, 2724.51, 1150.02, 2587.15, 1155.11, 2409.46, 1147.72, 2320.33, 1119.33, 2270.13, 1090.09, 2249.54, 1060.86, 2228.96, 1002.1, 2197.66, 893.394, 2174.82, 774.469, 2161.58, 536.336, 2144.96, 158.844, 2134.28, 99.2399, 2132.6, 29.9846, 2120.76, -78.1582, 2078.18, -185.17, 1996.12, -300.702, 1864.41, -357.195, 1754.14, -402.623, 1604.66, -447.203, 1425.57, -443.81, 1307.11, -436.457, 1050.44, -435.609, 1020.83 ), PoolVector2Array( -410.724, 152.122, -407.614, 43.5338, 188.144, 70.266, 185.033, 178.854 ) ]

[sub_resource type="Curve2D" id=2]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 10, 0, 0, 0, 0, -80, -2800, -2.72075, -84.3432, -58.4961, -333.292, -120, -3430, -46.5446, -49.5972, 0, 0, -450, -3950, 50.54, 40.6125, -52.345, -59.565, -810, -4080, 0, 0, -10.8072, -85.3769, -1080, -4760, 0, 0, -505.832, -196.958, -1500, -5220, 0, 0, 0, 0, -2170, -5160, 0, 0, -146.205, 148.01, -2450, -4730, -5.70154, 29.3222, 14.6611, 236.207, -2530, -3740, 0, 0, 22.0528, 119.085, -2510, -3030, 0, 0, -169.806, 88.9461, -3890, -2520, 0, 0, -118.089, 160.548, -4470, -2040, 0, 0, 5.98737, 184.411, -4420, -840, 0, 0, 214.948, 35.1613, -3680, -610, 0, 0, 0, 0, -3190, -570, 0, 0, 0, 0, -2640, -570, 0, 0, 0, 0, -2080, -480, 0, 0, -22.8062, 210.957, -1850, 130, 0, 0, 0, 0, -1950, 710, 0, 0, 0, 0, -2190, 830, 0, 0, -152, 74, -2590, 1050, 0, 0, -22, 34, -2700, 1590, 0, 0, -22.8062, 156.385, -2710, 2220, 0, 0, 40.4687, 90.2252, -2570, 2910, 0, 0, 0, 0, -1970, 3080, 0, 0, 0, 0, -1220, 3120, 0, 0, 295.886, 52.4102, 220, 3120, 0, 0, 177.797, -109.464, 1180, 3140, 0, 0, 280.07, -150.694, 1590, 2740, 0, 0, 0, 0, 1640, 2120, 0, 0, -405.017, -12.9301, 1260, 1770, 0, 0, -163.19, 41.1652, 460, 1760, 0, 0, -127.531, -22.1533, 120, 1680, 0, 0, -23.6176, -318.11, -40, 770, 0, 0, 55.0838, -163.455, -60, 280, 0, 0, 0, 0, 0, 10 )
}

[sub_resource type="CapsuleShape2D" id=3]

custom_solver_bias = 0.0
radius = 43.9992
height = 5.43011

[node name="TestMap" type="Node2D" index="0"]

[node name="Ground" type="TileMap" parent="." index="0"]

scale = Vector2( 5, 5 )
mode = 0
tile_set = ExtResource( 1 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -1114120, 0, 0, -1114119, 0, 0, -1114118, 0, 0, -1114117, 0, 0, -1114116, 0, 0, -1114115, 0, 0, -1048586, 0, 0, -1048585, 0, 0, -1048584, 0, 0, -1048579, 0, 0, -1048578, 0, 0, -983050, 0, 0, -983042, 0, 0, -983041, 0, 0, -917514, 0, 0, -917510, 0, 0, -917505, 0, 0, -983040, 0, 0, -851978, 0, 0, -851974, 0, 0, -851973, 0, 0, -851970, 0, 0, -917504, 0, 0, -917503, 0, 0, -786442, 0, 0, -786438, 0, 0, -786437, 0, 0, -851967, 0, 0, -720907, 0, 0, -720906, 0, 0, -720902, 0, 0, -720900, 0, 0, -786431, 0, 0, -655370, 0, 0, -655366, 0, 0, -655364, 0, 0, -655362, 0, 0, -720895, 0, 0, -589838, 0, 0, -589837, 0, 0, -589836, 0, 0, -589835, 0, 0, -589834, 0, 0, -589830, 0, 0, -589828, 0, 0, -589826, 0, 0, -655359, 0, 0, -524304, 0, 0, -524303, 0, 0, -524302, 0, 0, -524294, 0, 0, -524291, 0, 0, -524290, 0, 0, -589823, 0, 0, -458768, 0, 0, -458759, 0, 0, -458755, 0, 0, -458754, 0, 0, -524287, 0, 0, -393232, 0, 0, -393229, 0, 0, -393228, 0, 0, -393227, 0, 0, -393226, 0, 0, -393225, 0, 0, -393224, 0, 0, -393223, 0, 0, -393219, 0, 0, -393218, 0, 0, -458751, 0, 0, -327696, 0, 0, -327693, 0, 0, -327692, 0, 0, -327686, 0, 0, -327683, 0, 0, -327682, 0, 0, -393215, 0, 0, -262160, 0, 0, -262156, 0, 0, -262155, 0, 0, -262154, 0, 0, -262149, 0, 0, -262148, 0, 0, -262147, 0, 0, -262146, 0, 0, -327679, 0, 0, -196624, 0, 0, -196618, 0, 0, -196617, 0, 0, -196616, 0, 0, -196615, 0, 0, -196614, 0, 0, -196613, 0, 0, -196610, 0, 0, -262143, 0, 0, -131088, 0, 0, -131077, 0, 0, -131076, 0, 0, -131074, 0, 0, -196607, 0, 0, -65552, 0, 0, -65550, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -131071, 0, 0, -16, 0, 0, -15, 0, 0, -14, 0, 0, -13, 0, 0, -4, 0, 0, -3, 0, 0, -65535, 0, 0, 65523, 0, 0, 65524, 0, 0, 65525, 0, 0, 65526, 0, 0, 65527, 0, 0, 65528, 0, 0, 65532, 0, 0, 65533, 0, 0, 1, 0, 0, 131059, 0, 0, 131063, 0, 0, 131064, 0, 0, 131068, 0, 0, 131069, 0, 0, 65537, 0, 0, 196594, 0, 0, 196595, 0, 0, 196598, 0, 0, 196599, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 131073, 0, 0, 262130, 0, 0, 262133, 0, 0, 262134, 0, 0, 262138, 0, 0, 262139, 0, 0, 262142, 0, 0, 196609, 0, 0, 196610, 0, 0, 327669, 0, 0, 327673, 0, 0, 327674, 0, 0, 327678, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 393205, 0, 0, 393210, 0, 0, 393211, 0, 0, 393214, 0, 0, 327685, 0, 0, 327686, 0, 0, 458741, 0, 0, 458746, 0, 0, 458747, 0, 0, 458750, 0, 0, 393221, 0, 0, 393222, 0, 0, 524277, 0, 0, 524280, 0, 0, 524281, 0, 0, 524283, 0, 0, 524284, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458758, 0, 0, 589813, 0, 0, 589817, 0, 0, 589821, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524294, 0, 0, 655349, 0, 0, 655356, 0, 0, 589824, 0, 0, 589830, 0, 0, 720886, 0, 0, 655366, 0, 0, 786421, 0, 0, 786422, 0, 0, 786423, 0, 0, 786424, 0, 0, 786427, 0, 0, 786428, 0, 0, 786429, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 851959, 0, 0, 851960, 0, 0, 851961, 0, 0, 851962, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Road" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 50, 50 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -6750255, 536870913, 0, -6750235, 1, 0, -5439535, 536870912, 0, -5439507, 1610612737, 0, -4980744, 1, 0, -4653103, 536870912, 0, -3866679, 1073741825, 0, -3735552, 0, 0, -3342423, -1073741823, 0, -3342403, -1610612736, 0, -2949120, 0, 0, -2359296, 0, 0, -2031703, 1073741824, 0, -1769472, 0, 0, -1245271, 1610612737, 0, -1179648, 0, 0, -720963, -2147483648, 0, -720951, -2147483648, 0, -720939, -536870911, 0, -589824, 0, 0, 0, 0, 0, 589781, -1610612735, 0, 786432, 0, 0, 1114057, -1073741823, 0, 1572864, 0, 0, 1966080, -2147483647, 0, 2424777, 1073741824, 0, 2490381, -536870912, 0, 2490393, 1, 0, 3211209, 1073741824, 0, 3801033, 1610612737, 0, 3735577, -1610612735, 0, 4325341, -536870912, 0, 4325353, -536870912, 0, 4325365, -536870912, 0, 4259841, -536870912, 0, 4259853, -536870912, 0 )
_sections_unfolded = [ "Cell" ]

[node name="Walls" type="Node2D" parent="." index="2"]

position = Vector2( 210, 10 )
scale = Vector2( 2, 2 )

[node name="Walls" type="TileMap" parent="Walls" index="0"]

position = Vector2( -110, 20 )
mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 50, 50 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( -3080192, 0, 0, -3014656, 0, 0, -2949120, 0, 0, -2883584, 0, 0, -2818048, 0, 0, -2752512, 0, 0, -2686976, 0, 0, -2621440, 0, 0, -2621439, -1610612736, 0, -2621438, -1610612736, 0, -2621437, -1610612736, 0, -2621436, -1610612736, 0, -2621435, -1610612736, 0, -2621434, -1610612736, 0, -2621433, 0, 0, -2555897, 0, 0, -2490361, 0, 0, -2424825, 0, 0, -2359289, 0, 0, -2293753, 0, 0, -2228217, 0, 0, -2162681, 0, 0, -2097145, 0, 0, -2031609, 0, 0, -1966073, 0, 0, -1900537, 0, 0, -1835001, 0, 0, -1769465, 0, 0, -1703929, 0, 0, -1638393, 0, 0, -1572857, 0, 0, -1507321, 0, 0, -1441785, 0, 0, -1376249, 0, 0, -1245187, 0, 0, -1310713, 0, 0, -1179651, 0, 0, -1245177, 0, 0, -1114115, 0, 0, -1179641, 0, 0, -1048579, 0, 0, -1114105, 0, 0, -983043, 0, 0, -1048569, 0, 0, -917507, 0, 0, -983033, 0, 0, -851971, 0, 0, -917497, 0, 0, -786435, 0, 0, -851961, 0, 0, -720899, 0, 0, -786425, 0, 0, -655363, 0, 0, -720889, 0, 0, -589827, 0, 0, -655353, 0, 0, -524291, 0, 0, -589817, 0, 0, -458755, 0, 0, -524281, 0, 0, -393219, 0, 0, -458745, 0, 0, -327683, 0, 0, -393209, 0, 0, -262147, 0, 0, -327673, 0, 0, -196611, 0, 0, -262137, 0, 0, -131075, 0, 0, -196601, 0, 0, -65539, 0, 0, -131065, 0, 0, -3, 0, 0, -65529, 0, 0, 65533, 0, 0, 7, 0, 0, 131069, 0, 0, 65543, 0, 0, 196605, 0, 0, 131079, 0, 0, 262141, 0, 0, 196615, 0, 0, 327677, 0, 0, 262151, 0, 0, 393213, 0, 0, 327687, 0, 0 )
_sections_unfolded = [ "Cell", "Transform" ]

[node name="Pick_Up" parent="." index="3" instance=ExtResource( 4 )]

position = Vector2( 223.91, -906.808 )

[node name="Player" parent="." index="4" instance=ExtResource( 5 )]

position = Vector2( 250, 330 )
scale = Vector2( 0.75, 0.75 )
_sections_unfolded = [ "Transform" ]

[node name="Camera2D" type="Camera2D" parent="Player" index="3"]

position = Vector2( -13.3333, -493.333 )
anchor_mode = 1
rotating = true
current = true
zoom = Vector2( 2, 2 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Drag Margin", "Transform" ]

[node name="ItemPath" type="Navigation2D" parent="." index="5"]

position = Vector2( 410, 350 )
rotation = -0.0284585
script = ExtResource( 6 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="ItemPath" index="0"]

position = Vector2( -1.10107, -5.76859 )
scale = Vector2( 1.00624, 1.01259 )
navpoly = SubResource( 4 )
enabled = true

[node name="Rocket" parent="ItemPath" index="1" instance=ExtResource( 7 )]

[node name="BotPath" type="Path2D" parent="." index="6"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
position = Vector2( 390, 330 )
curve = SubResource( 2 )
script = ExtResource( 8 )

[node name="BothPathFollow" type="PathFollow2D" parent="BotPath" index="0"]

position = Vector2( 0, 10 )
rotation = -1.59926
scale = Vector2( 0.165233, 0.18135 )
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Bot" type="KinematicBody2D" parent="BotPath/BothPathFollow" index="0"]

position = Vector2( 33.7585, 0.729248 )
rotation = 1.5708
scale = Vector2( 5.51419, 6.05205 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="BotPath/BothPathFollow/Bot" index="0"]

scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 9 )
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BotPath/BothPathFollow/Bot" index="1"]

position = Vector2( 0.77502, -1.50659 )
scale = Vector2( 1.05929, 1.00173 )
shape = SubResource( 3 )

[connection signal="body_entered" from="ItemPath/Rocket" to="ItemPath" method="_on_Rocket_body_entered"]


